--- a/index.html
+++ b/index.html
@@ -42,21 +42,19 @@
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
 								alt="Logo de l'agence de web design la Panthère située à Lyon" height="40" /></a>
 
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-							data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
-								class="icon-bar"></span><span class="icon-bar"></span>
-						</button>
+						<div><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+								data-toggle="collapse" data-target=".navbar-1">
+								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+									class="icon-bar"></span><span class="icon-bar"></span>
+							</button></div>
 					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<div class="déroulant-mobil collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html">Accueil</a>
+								<a href="index.html" class="ahref-accueil">Accueil</a>
 							</li>
 							<li>
-							</li>
-							<li>
-								<a href="Contact.html">Contact &gt;</a>
+								<a href="Contact.html" class="ahref-accueil">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -91,14 +89,15 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="L'agence La panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet"
-							src="img/title.png" />
+						<h2 class="subtitle-bloc-md"> L'agence La Panthère est une agence de web design qui aide les
+							entreprises à devenir attractives et visibles sur Internet</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
 						<div class="text-center">
-							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Expertise en web design"></span>
+							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"
+								aria-label="Expertise en web design"></span>
 						</div>
 						<h3 class="mg-md text-center">
 							Web design
@@ -110,7 +109,8 @@
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
-							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Expertise en stratégie web"></span>
+							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"
+								aria-label="Expertise en stratégie web"></span>
 						</div>
 						<h3 class="mg-md text-center">
 							&nbsp;Stratégie
@@ -122,7 +122,8 @@
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
-							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Expertise en illustrations"></span>
+							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"
+								aria-label="Expertise en illustrations"></span>
 						</div>
 						<h3 class="mg-md text-center">
 							Illustrations
@@ -135,8 +136,10 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="Avis du client sur l'agence La panthère : Cela nous a aidé à doubler nos ventes en ligne à Lyon"
-							src="img/citation.png" />
+						<blockquote class="review-client">"L'agence La Panthère est une excellente agence web ! Les web
+							designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
+							Cela nous a aidé à doubler nos ventes en ligne à Lyon."<em> Maxime Guibard, PDG de À vos
+								fourchettes</em></blockquote>
 					</div>
 				</div>
 			</div>
@@ -173,7 +176,8 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="Les réalisations de l'agence La panthère" src="img/title2.png" />
+						<h2 class="réalisations-title">Nous travaillons avec beaucoup de clients, voici nos
+							réalisations.</h2>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
@@ -238,7 +242,7 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2 class="mg-md text-center tc-white">
+					<h2 class="mg-md text-center tc-white footer-title">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
@@ -258,26 +262,29 @@
 						<p class="text-center white">
 							Agence La Panthère - Agence web basée à Lyon.<br>
 						</p>
-						<div class="row row-no-gutters social">
+						<div class="row row-no-gutters social social-footer">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"aria-label="Icone twitter"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"
+											aria-label="Icone twitter"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md" aria-label="Icone facebook"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"
+											aria-label="Icone facebook"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" aria-label="Icone dribbble"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"
+											aria-label="Icone dribbble"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md" aria-label="Icone instagram"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
+											aria-label="Icone instagram"></span></a>
 								</div>
 							</div>
 
@@ -285,11 +292,11 @@
 					</div>
 				</div>
 			</div>
-			<!-- Footer - bloc-8 END -->
-
 		</div>
-		<!-- Principal conteneur END -->
+		<!-- Footer - bloc-8 END -->
 
+</div>
+		<!-- Principal conteneur END -->
 
 </body>
 
