--- a/Contact.html
+++ b/Contact.html
@@ -58,7 +58,7 @@
 						<h1 class="text-center hero-bloc-text tc-white h1-contact">
 							Parlons web design !
 						</h1>
-						<p class="subtitle-contact text-center mg-lg tc-white tight-width-whitespace ">
+						<p class="subtitle-contact text-center mg-lg tight-width-whitespace ">
 							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 						</p>
