correction du title index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 	<script src="./js/gmaps.min.js"></script>
 
-	<title>La Panthère: Agence web à Lyon - création de site internet</title>
+	<title>La Panthère : agence web à Lyon - création de site internet</title>
 
 
 	<!-- Analytics -->
