modif aria-label icone

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"
-								aria-label="Expertise en web design"></span>
+								></span>
 						</div>
 						<h3 class="mg-md text-center">
 							Web design
@@ -110,7 +110,7 @@
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"
-								aria-label="Expertise en stratégie web"></span>
+								></span>
 						</div>
 						<h3 class="mg-md text-center">
 							&nbsp;Stratégie
@@ -123,7 +123,7 @@
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"
-								aria-label="Expertise en illustrations"></span>
+								></span>
 						</div>
 						<h3 class="mg-md text-center">
 							Illustrations
