ajout des arial label et id

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
 						<div class="text-center">
-							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"
-								></span>
+							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">
 							Web design
@@ -109,8 +108,7 @@
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
-							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"
-								></span>
+							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">
 							&nbsp;Stratégie
@@ -122,8 +120,7 @@
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
-							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"
-								></span>
+							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">
 							Illustrations
@@ -265,26 +262,26 @@
 						<div class="row row-no-gutters social social-footer">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"
-											aria-label="Icone twitter"></span></a>
+									<a class="social" href="https://twitter.com/?lang=fr"
+										aria-label="Icone twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"
-											aria-label="Icone facebook"></span></a>
+									<a class="social" href="https://www.facebook.com/" aria-label="Icone facebook"><span
+											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"
-											aria-label="Icone dribbble"></span></a>
+									<a class="social" href="https://dribbble.com/" aria-label="Icone dribbble"><span
+											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
-											aria-label="Icone instagram"></span></a>
+									<a class="social" href="https://www.instagram.com/"
+										aria-label="Icone instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 
@@ -295,8 +292,8 @@
 		</div>
 		<!-- Footer - bloc-8 END -->
 
-</div>
-		<!-- Principal conteneur END -->
+	</div>
+	<!-- Principal conteneur END -->
 
 </body>
 
