--- a/Contact.html
+++ b/Contact.html
@@ -77,19 +77,19 @@
 							data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
 							class="formulaire-container">
 							<div class="form-group name-form">
-								<label>
+								<label for="name">
 									Nom
 								</label>
-								<input type="text" placeholder="Votre nom" class="form-control" required />
+								<input id="name" type="text" placeholder="Votre nom" class="form-control" required />
 							</div>
 							<div class="form-group email-form">
-								<label>
+								<label for="email">
 									Adresse email
 								</label>
-								<input type="email" placeholder="Votre email" class="form-control" required />
+								<input id="email" type="email" placeholder="Votre email" class="form-control" required />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="input_504">
 									Comment nous avez-vous connu ?
 								</label>
 								<input name="Comment nous avez-vous connu?"
@@ -97,7 +97,7 @@
 									class="form-control knowing-panthère" required id="input_504" />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="message">
 									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 								</label><textarea id="message" placeholder="Partagez-nous les détails de votre projet"
 									class="form-control projet-panthère" rows="4" cols="50" required></textarea>
@@ -120,8 +120,8 @@
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-				class="fa fa-chevron-up"></span></a>
+		<a role="button" aria-label="back to top" class="bloc-button btn btn-d scrollToTop"
+			onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 
 
@@ -136,26 +136,26 @@
 						<div class="flex-center">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"
-											aria-label="Icone twitter"></span></a>
+									<a class="social" href="https://twitter.com/?lang=fr"
+										aria-label="Icone twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"
-											aria-label="Icone facebook"></span></a>
+									<a class="social" href="https://www.facebook.com/" aria-label="Icone facebook"><span
+											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"
-											aria-label="Icone dribbble"></span></a>
+									<a class="social" href="https://dribbble.com/" aria-label="Icone dribbble"><span
+											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
-											aria-label="Icone instagram"></span></a>
+									<a class="social" href="https://www.instagram.com/"
+										aria-label="Icone instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 
