ajout d'un height logo contact

--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header img-logo">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
+						<a class="navbar-brand logocontact" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
 								alt="Logo de l'agence de web design La panthère" height="40" /></a>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav contact-nav">
